--- a/src/styles.css
+++ b/src/styles.css
@@ -28,8 +28,8 @@ code {
   --card-foreground: oklch(0.141 0.005 285.823);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(0.21 0.006 285.885);
-  --primary-foreground: oklch(0.985 0 0);
+  --primary: oklch(0.985 0 0);
+  --primary-foreground: oklch(0.21 0.006 285.885);
   --secondary: oklch(0.967 0.001 286.375);
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(0.967 0.001 286.375);
@@ -140,4 +140,14 @@ code {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+*::selection {
+  background: #ffffff20;
+}
+*::-moz-selection {
+  background: #ffffff20;
+}
+*::-webkit-selection {
+  background: #ffffff20;
 }
