--- a/src/styles.css
+++ b/src/styles.css
@@ -22,39 +22,7 @@ code {
   --font-sans: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   --font-mono: "Geist Mono", source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
-  --background: oklch(0.1877 0.004 286.01);
-  --foreground: oklch(1 0 0);
-  /* --card: oklch(1 0 0); */
-  /* --card-foreground: oklch(0.141 0.005 285.823); */
-  /* --popover: oklch(1 0 0); */
-  /* --popover-foreground: oklch(0.141 0.005 285.823); */
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.21 0.006 285.885);
-  --secondary: oklch(0.967 0.001 286.375);
-  --secondary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.967 0.001 286.375);
-  --muted-foreground: oklch(0.552 0.016 285.938);
-  --accent: oklch(0.967 0.001 286.375);
-  --accent-foreground: oklch(0.21 0.006 285.885);
-  --destructive: oklch(0.577 0.245 27.325);
-  --destructive-foreground: oklch(0.577 0.245 27.325);
-  --border: oklch(0.92 0.004 286.32);
-  --input: oklch(0.92 0.004 286.32);
-  --ring: oklch(0.871 0.006 286.286);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
   --radius: 0.625rem;
-  --sidebar: oklch(0.1877 0.004 286.01);
-  /* --sidebar-foreground: oklch(1 0 0); */
-  --sidebar-primary: oklch(0.21 0.006 285.885);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.967 0.001 286.375);
-  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
-  --sidebar-border: oklch(0.92 0.004 286.32);
-  --sidebar-ring: oklch(0.871 0.006 286.286);
 
   /* from figma */
   --text-primary: #fafafa;
@@ -65,6 +33,7 @@ code {
 
   --border-subtle: #e4e4e740;
   --border-active: #f5f5f5;
+  --border-tertiary: #fafafa;
   --border-danger: #f87171;
   --border-accent: #4f263d;
 
@@ -76,12 +45,21 @@ code {
     rgba(41, 41, 41, 0.12) 100%
   );
   --background-selected-accent: #4f263d;
-  --background-text-field: #262626;
+  --background-text-field: linear-gradient(
+    180deg,
+    rgba(41, 41, 41, 0.24) 40.42%,
+    rgba(41, 41, 41, 0.12) 100%
+  );
+  --background-dropdown: #171717;
+  --background-dropdown-selected: #262626;
+
   --progress-bar-complete: linear-gradient(90deg, #49244f 0%, #643b5e 100%);
   --progress-bar-incomplete: #e4e4e740;
+
   --tag-active: #fafafa;
   --tag-success: #4ade80;
   --tag-disabled: #a3a3a3;
+
   --background-button-primary: #4f263d;
   --background-button-secondary: #262626;
   --background-button-tertiary: #fafafa;
@@ -89,128 +67,53 @@ code {
   --background-button-control: #fafafa;
 }
 
-/* .dark {
-  --background: oklch(0.1877 0.004 286.01);
-  --foreground: oklch(0.985 0 0);
-  --card: oklch(0.141 0.005 285.823);
-  --card-foreground: oklch(0.985 0 0);
-  --popover: oklch(0.141 0.005 285.823);
-  --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.21 0.006 285.885);
-  --secondary: oklch(0.274 0.006 286.033);
-  --secondary-foreground: oklch(0.985 0 0);
-  --muted: oklch(0.274 0.006 286.033);
-  --muted-foreground: oklch(0.705 0.015 286.067);
-  --accent: oklch(0.274 0.006 286.033);
-  --accent-foreground: oklch(0.985 0 0);
-  --destructive: oklch(0.396 0.141 25.723);
-  --destructive-foreground: oklch(0.637 0.237 25.331);
-  --border: oklch(0.274 0.006 286.033);
-  --input: oklch(0.274 0.006 286.033);
-  --ring: oklch(0.442 0.017 285.786);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.1877 0.004 286.01);
-  --sidebar-foreground: oklch(0.985 0 0);
-  --sidebar-primary: oklch(1 0 0);
-  --sidebar-primary-foreground: oklch(0.985 0 0);
-  --sidebar-accent: oklch(0.274 0.006 286.033);
-  --sidebar-accent-foreground: oklch(0.985 0 0);
-  --sidebar-border: oklch(0.274 0.006 286.033);
-  --sidebar-ring: oklch(0.442 0.017 285.786);
-} */
-
+/* custom colours */
 @theme inline {
-  --color-primary-foreground: var(--text-primary);
-  --color-secondary-foreground: var(--text-secondary);
-  --color-error-foreground: var(--text-error);
-  --color-accent-foreground: var(--text-accent);
-  --color-tertiary-button-foreground: var(--text-tertiary-button);
+  --color-\*: initial; /* disables all preset colours */
 
-  --color-subtle: var(--border-subtle);
-  --border-active: #f5f5f5;
-  --color-danger: var(--border-danger);
-  --color-accent: var(--border-accent);
+  --color-text-primary: var(--text-primary);
+  --color-text-secondary: var(--text-secondary);
+  --color-text-error: var(--text-error);
+  --color-text-accent: var(--text-accent);
 
-  --background-main: #111118;
-  --color-pane-container: var(--background-pane-container);
-  --background-translucent-card: linear-gradient(
-    180deg,
-    rgba(41, 41, 41, 0.24) 40.42%,
-    rgba(41, 41, 41, 0.12) 100%
-  );
-  --color-selected-accent: var(--background-selected-accent);
-  --background-text-field: #262626;
+  --color-border-subtle: var(--border-subtle);
+  --color-border-active: var(--border-active);
+  --color-border-danger: var(--border-danger);
+  --color-border-accent: var(--border-accent);
 
-  --progress-bar-complete: linear-gradient(90deg, #49244f 0%, #643b5e 100%);
-  --progress-bar-incomplete: #e4e4e740;
-  --tag-active: #fafafa;
-  --tag-success: #4ade80;
-  --tag-disabled: #a3a3a3;
+  --color-bg-main: var(--background-main);
+  --color-bg-pane-container: var(--background-pane-container);
+  --color-bg-translucent-card: var(--background-translucent-card);
+  --color-bg-selected-accent: var(--background-selected-accent);
+  --color-bg-text-field: var(--background-text-field);
+  --color-bg-dropdown: var(--background-dropdown);
+  --color-bg-dropdown-selected: var(--background-dropdown-selected);
 
-  --color-button-primary: var(--background-button-primary);
-  --color-button-secondary: var(--background-button-secondary);
-  --color-button-tertiary: var(--background-button-tertiary);
-  --color-button-disabled: var(--background-button-disabled);
-  --bg-button-control: #fafafa;
-}
+  --color-bg-progress-bar-complete: var(--progress-bar-complete);
+  --color-bg-progress-bar-incomplete: var(--progress-bar-incomplete);
+  --color-bg-tag-active: var(--tag-active);
+  --color-tag-success: var(--tag-success);
+  --color-tag-disabled: var(--tag-disabled);
 
-@theme inline {
+  --color-bg-button-primary: var(--background-button-primary);
+  --color-bg-button-secondary: var(--background-button-secondary);
+  --color-bg-button-tertiary: var(--background-button-tertiary);
+  --color-bg-button-disabled: var(--background-button-disabled);
+  --color-bg-button-control: var(--background-button-control);
+  --color-button-tertiary: var(--text-tertiary-button); /* one-off, used for border and text colours */
+
   --font-sans: var(--font-sans);
   --font-mono: var(--font-mono);
-
-  /* --color-background: var(--background); */
-  --color-foreground: var(--text-primary);
-  /* --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
-  --color-popover-foreground: var(--popover-foreground); */
-  /* --color-primary: var(--primary); */
-  /* --color-primary-foreground: var(--primary-foreground); */
-  /* --color-secondary: var(--secondary); */
-  /* --color-secondary-foreground: var(--secondary-foreground); */
-  /* --color-muted: var(--muted);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-destructive: var(--destructive);
-  --color-destructive-foreground: var(--destructive-foreground); */
-  --color-border: var(--border);
-  --color-input: var(--input);
-  --color-ring: var(--ring);
-
-  /* --color-chart-1: var(--chart-1);
-  --color-chart-2: var(--chart-2);
-  --color-chart-3: var(--chart-3);
-  --color-chart-4: var(--chart-4);
-  --color-chart-5: var(--chart-5); */
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
-
-  /* --color-sidebar: var(--background-pane-container); */
-  /* --color-sidebar-foreground: var(--text-primary); */
-  /* --color-sidebar-primary: var(--background-selected-accent);
-  --color-sidebar-primary-foreground: var(--text-primary); */
-  /* --color-sidebar-accent: var(--background-selected-accent); */
-  /* --color-sidebar-accent-foreground: var(--text-primary); */
-  /* --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-ring: var(--sidebar-ring); */
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
   body {
-    @apply text-primary-foreground;
-    /* bg-background */
+    @apply bg-bg-main text-text-primary;
   }
 }
 
