--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=Freehand&display=swap");
 
 @import "tailwindcss";
 
@@ -22,6 +22,7 @@ code {
   --font-sans: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   --font-mono: "Geist Mono", source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+  --font-cursive: "Freehand", cursive;
   --radius: 0.625rem;
 
   /* from figma */
@@ -91,7 +92,7 @@ code {
 
   --color-bg-progress-bar-complete: var(--progress-bar-complete);
   --color-bg-progress-bar-incomplete: var(--progress-bar-incomplete);
-  --color-bg-tag-active: var(--tag-active);
+  --color-tag-active: var(--tag-active);
   --color-tag-success: var(--tag-success);
   --color-tag-disabled: var(--tag-disabled);
 
@@ -104,6 +105,7 @@ code {
 
   --font-sans: var(--font-sans);
   --font-mono: var(--font-mono);
+  --font-cursive: var(--font-cursive);
 
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
