--- a/src/styles.css
+++ b/src/styles.css
@@ -30,6 +30,7 @@ code {
   --text-secondary: #737373;
   --text-error: #f87171;
   --text-accent: #4f263d;
+  --text-neutral: #f5f5f5;
   --text-tertiary-button: #fafafa; /* only used for tertiary button */
 
   --border-subtle: #e4e4e740;
@@ -76,6 +77,7 @@ code {
   --color-text-secondary: var(--text-secondary);
   --color-text-error: var(--text-error);
   --color-text-accent: var(--text-accent);
+  --color-text-neutral: var(--text-neutral);
 
   --color-border-subtle: var(--border-subtle);
   --color-border-active: var(--border-active);
