fix: border styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -38,6 +38,7 @@ code {
   --border-tertiary: #fafafa;
   --border-danger: #f87171;
   --border-accent: #4f263d;
+  --border-stampbook: #c2bcbb;
 
   --background-main: #111118;
   --background-pane-container: #0f0f15;
@@ -83,6 +84,7 @@ code {
   --color-border-active: var(--border-active);
   --color-border-danger: var(--border-danger);
   --color-border-accent: var(--border-accent);
+  --color-border-stampbook: var(--border-stampbook);
 
   --color-bg-main: var(--background-main);
   --color-bg-pane-container: var(--background-pane-container);
